feat: added Rent form

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <a href="buy.html">Buy a house</a>
     <hr/>
     <a href="about.html">About us</a>
+    <hr/>
+    <a href="Rform.html">Rent form</a>
 
 </body>
 </html>
