feat: added C feature

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <a href="about.html">About us</a>
     <hr/>
     <a href="Rform.html">Rent form</a>
-
+    <hr/>
+    <a href="Lform.html">lender form</a>
 </body>
 </html>
